<resources>
  <string name="app_name">手持测试</string>

  <string name="main_uhf">超高频</string>
  <string name="main_nfc">高频</string>
  <string name="main_init_bag3">锁3初始化</string>
  <string name="main_check_bag">锁3检测</string>
  <string name="main_socket">TCP测试</string>
  <string name="main_barcode">二维码、条码</string>
  <string name="main_finger">指纹</string>
  <string name="main_old_bag">老袋校验</string>
  <string name="main_sound">声音、音效</string>
  <string name="main_cover_bag">模拟封袋</string>
  <string name="main_bag_search">查找袋Id</string>
  <string name="main_zc">APDU</string>
  <string name="main_uhf_lot">超高频批量</string>
  <string name="main_zc_lock">中钞锁</string>
  <string name="main_netty">Netty测试</string>
  <string name="main_about">关于</string>

  <string name="text_click_again_quit">再次点击退出</string>

  <string name="v_match_finger">匹配指纹</string>
  <string name="v_add_finger">添加指纹</string>

  <string name="title_activity_main2">MainActivity</string>
  <string name="title_common">常用</string>
  <string name="title_module">硬件</string>
  <string name="title_other">其他</string>
</resources>
