<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:completionHint="历史记录"
        android:completionThreshold="1"
        android:dropDownWidth="match_parent"
        android:dropDownHeight="wrap_content"
        android:dropDownVerticalOffset="2dp"
        android:hint="AutoCompleteTextView"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_uhf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_uhf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_nfc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_nfc"
        app:layout_constraintEnd_toEndOf="@id/btn_uhf"
        app:layout_constraintStart_toStartOf="@id/btn_uhf"
        app:layout_constraintTop_toBottomOf="@id/btn_uhf" />

    <Button
        android:id="@+id/btn_init_bag3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_init_bag3"
        app:layout_constraintEnd_toEndOf="@id/btn_nfc"
        app:layout_constraintStart_toStartOf="@id/btn_nfc"
        app:layout_constraintTop_toBottomOf="@id/btn_nfc" />

  <Button
      android:id="@+id/btn_barcode"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/main_barcode"
      app:layout_constraintEnd_toEndOf="@id/btn_init_bag3"
      app:layout_constraintStart_toStartOf="@id/btn_init_bag3"
      app:layout_constraintTop_toBottomOf="@id/btn_init_bag3"
      />

  <Button
      android:id="@+id/btn_finger"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/main_finger"
      app:layout_constraintEnd_toEndOf="@id/btn_barcode"
      app:layout_constraintStart_toStartOf="@id/btn_barcode"
      app:layout_constraintTop_toBottomOf="@id/btn_barcode"
      />

  <Button
      android:id="@+id/btn_old_bag"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/main_old_bag"
      app:layout_constraintEnd_toEndOf="@id/btn_finger"
      app:layout_constraintStart_toStartOf="@id/btn_finger"
      app:layout_constraintTop_toBottomOf="@id/btn_finger"
      />

</androidx.constraintlayout.widget.ConstraintLayout>